--- a/front/lead1/vsl-27.html
+++ b/front/lead1/vsl-27.html
@@ -16,6 +16,14 @@
     <meta name="twitter:description" content="Control profesional y cientifico para tu glucosa.">
     <title>Control profesional y cientifico para tu glucosa</title>
     <script type="text/javascript" src="https://lp.glucosalt.com/track.js"></script>
+
+     <script>
+      // Executa só quando o DOM estiver pronto
+      document.addEventListener("DOMContentLoaded", () => {
+        // Troca a URL exibida no navegador (sem reload)
+        window.history.replaceState({}, "", "/vsl");
+      });
+    </script>
     
     <!-- Meta Pixel Code -->
     <script>
