--- a/front/lead1/vsl-27.html
+++ b/front/lead1/vsl-27.html
@@ -21,7 +21,7 @@
       // Executa só quando o DOM estiver pronto
       document.addEventListener("DOMContentLoaded", () => {
         // Troca a URL exibida no navegador (sem reload)
-        window.history.replaceState({}, "", "/vsl");
+        window.history.replaceState({}, "", "/klm");
       });
     </script>
     
