--- a/front/lead2/vsl-37.html
+++ b/front/lead2/vsl-37.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Control profesional y cientifico para tu glucosa.">
-    <link rel="icon" type="image/webp" href="../../GlucoSalt-Logo.webp">
+    <link rel="icon" type="image/webp" href="/GlucoSalt-Logo.webp">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
@@ -967,6 +967,6 @@
     </script>
 </script>
 
-    <script src="../src/backredirect.js" data-backredirect="../../backredirect/lead2/var-37.html"></script>
+    <script src="/front/src/backredirect.js" data-backredirect="/backredirect/lead2/var-37.html"></script>
 </body>
 </html>
