--- a/backredirect/lead3/var-27.html
+++ b/backredirect/lead3/var-27.html
@@ -26,10 +26,10 @@
     <meta property="twitter:image" content="../assets/GlucoSalt-Logo.png">
     
     <!-- Favicon -->
-    <link rel="icon" href="../assets/GlucoSalt-Logo.png">
-    <link rel="shortcut icon" href="../assets/GlucoSalt-Logo.png">
-    <link rel="apple-touch-icon" href="../assets/GlucoSalt-Logo.png">
-    <link rel="stylesheet" href="../src/styles.css">
+    <link rel="icon" href="/backredirect/assets/GlucoSalt-Logo.png">
+    <link rel="shortcut icon" href="/backredirect/assets/GlucoSalt-Logo.png">
+    <link rel="apple-touch-icon" href="/backredirect/assets/GlucoSalt-Logo.png">
+    <link rel="stylesheet" href="/backredirect/src/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -132,7 +132,7 @@
                     <div class="testimonial-card">
                         <div class="testimonial-header">
                             <div class="profile-pic">
-                                <img src="../assets/13lpa.webp" alt="Mujer 45+">
+                                <img src="/backredirect/assets/13lpa.webp" alt="Mujer 45+">
                             </div>
                             <div class="user-name">Carmen</div>
                         </div>
@@ -153,7 +153,7 @@
                     <div class="testimonial-card">
                         <div class="testimonial-header">
                             <div class="profile-pic">
-                                <img src="../assets/03lpa.webp" alt="Mujer 50+">
+                                <img src="/backredirect/assets/03lpa.webp" alt="Mujer 50+">
                             </div>
                             <div class="user-name">Lucía</div>
                         </div>
@@ -174,7 +174,7 @@
                     <div class="testimonial-card">
                         <div class="testimonial-header">
                             <div class="profile-pic">
-                                <img src="../assets/h1.webp" alt="Hombre 55+">
+                                <img src="/backredirect/assets/h1.webp" alt="Hombre 55+">
                             </div>
                             <div class="user-name">Carlos</div>
                         </div>
@@ -206,7 +206,7 @@
     <!-- Zero Risk Guarantee Section -->
     <section class="guarantee-section">
         <div class="guarantee-badge">
-            <img src="../assets/170d.png" alt="Super Garantía Protegida 170 días" class="guarantee-image">
+            <img src="/backredirect/assets/170d.png" alt="Super Garantía Protegida 170 días" class="guarantee-image">
         </div>
         <h3>Tu inversión está 100% protegida por nuestra Super Garantía Protegida (SGP) de 170 días.</h3>
         <p>Esta es una página de continuación del video que acabás de ver.</p>
@@ -264,6 +264,6 @@
         <button class="cta-button final" id="final-cta" onclick="window.open('https://pay.hotmart.com/J102652578S?off=jw975son&checkoutMode=10', '_blank')">Obtener Acceso a mi Aplicación Personalizada US$ 14,90</button>
     </section>
 
-    <script src="../src/script.js"></script>
+    <script src="/backredirect/src/script.js"></script>
 </body>
 </html>
