Backredirect correção slugs

--- a/front/lead2/vsl-27.html
+++ b/front/lead2/vsl-27.html
@@ -967,6 +967,6 @@
     </script>
 </script>
 
-    <script src="/front/src/backredirect.js" data-backredirect="/backredirect/lead2/var-27.html"></script>
+    <script src="/front/src/backredirect.js" data-backredirect="/efg-b"></script>
 </body>
 </html>
