--- a/front/lead2/vsl-47.html
+++ b/front/lead2/vsl-47.html
@@ -967,6 +967,6 @@
     </script>
 </script>
 
-    <script src="/front/src/backredirect.js" data-backredirect="/backredirect/lead2/var-47.html"></script>
+    <script src="/front/src/backredirect.js" data-backredirect="/bvc-b"></script>
 </body>
 </html>
