--- a/front/lead4/vsl-47.html
+++ b/front/lead4/vsl-47.html
@@ -967,6 +967,6 @@
     </script>
 </script>
 
-    <script src="/front/src/backredirect.js" data-backredirect="/backredirect/lead4/var-47.html"></script>
+    <script src="/front/src/backredirect.js" data-backredirect="/ewq-b"></script>
 </body>
 </html>
