--- a/front/lead1/vsl-27.html
+++ b/front/lead1/vsl-27.html
@@ -967,6 +967,6 @@
     </script>
 </script>
 
-    <script src="/front/src/backredirect.js" data-backredirect="/backredirect/lead1/var-27.html"></script>
+    <script src="/front/src/backredirect.js" data-backredirect="/klm-b"></script>
 </body>
 </html>
