--- a/front/lead4/vsl-37.html
+++ b/front/lead4/vsl-37.html
@@ -967,6 +967,6 @@
     </script>
 </script>
 
-    <script src="/front/src/backredirect.js" data-backredirect="/backredirect/lead4/var-37.html"></script>
+    <script src="/front/src/backredirect.js" data-backredirect="/jjg-b"></script>
 </body>
 </html>
